--- a/install
+++ b/install
@@ -1,4 +1,4 @@
-# minecraft
+#!/bin/bash
 
 java -version
 
@@ -7,5 +7,5 @@ sudo apt-get install screen
 mkdir minecraft
 cd minecraft
 wget -O minecraft_server.jar https://s3.amazonaws.com/Minecraft.Download/versions/1.7.4/minecraft_server.1.7.4.jar
-screen -S "Minecraft server"
-java -Xmx1024M -Xms1024M -jar minecraft_server.jar nogui
+
+exit
